--- a/assets/scss/components/blocks/_group.scss
+++ b/assets/scss/components/blocks/_group.scss
@@ -7,8 +7,8 @@
 
 	&.alignfull {
 		// Can't override property or it will break nested blocks.
-		padding-right: calc(((var(--viewport-width) - var(--breakpoint-xl)) / 2) - var(--side-spacing));
-		padding-left: calc(((var(--viewport-width) - var(--breakpoint-xl)) / 2) - var(--side-spacing));
+		padding-right: var(--group-block-alignfull-padding-right, calc(((var(--viewport-width) - var(--breakpoint-xl)) / 2) - var(--side-spacing)));
+		padding-left: var(--group-block-alignfull-padding-left, calc(((var(--viewport-width) - var(--breakpoint-xl)) / 2) - var(--side-spacing)));
 
 		> .wp-block-group__inner-container {
 			margin-right: var(--side-spacing);
@@ -20,6 +20,11 @@
 		margin-top: 0;
 		margin-bottom: 0;
 	}
+}
+
+.has-boxed-container {
+	--group-block-alignfull-padding-right: 0.05px;
+	--group-block-alignfull-padding-left: 0.05px;
 }
 
 .wp-block-group__inner-container {
